--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,6 +14,10 @@ body{
     margin-top: 50px;
 }
 
+.footer{
+    padding-top: 100px;
+}
+
 @media (max-width:770px){
     .container{
         margin: 0 10%;
