--- a/src/App.module.css
+++ b/src/App.module.css
@@ -10,13 +10,31 @@ body{
 }
 
 .image{
-    width:370px;
-    margin-top: 50px;
+    width:1349px;
+    margin-top: 0px;
+}
+
+
+.imgContainer { 
+    position: relative; 
+    width: 100%; /* for IE 6 */
+}
+
+h1 { 
+    font-family: -apple-system, Segoe UI, Helvetica, Arial, sans-serif;  
+    font-size: 70px;
+    color: white;
+    text-shadow: 4px 1px 10px rgb(0, 0, 0);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
 }
 
 .footer{
     padding-top: 100px;
 }
+
 
 @media (max-width:770px){
     .container{
